@@ -9,6 +9,9 @@ fixed bugs:
   resulted in changing the row, which is not possible for unmodifiable constraints/locked rows
 - fixed bug in copying nonlinear constraints during presolve (nonlinear part was not copied)
 
+features:
+- added new dual presolving for setppc-constraints
+
 SCIP version 3.0.0
 ==================
 
